--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "emoji-picker-react": "^4.11.1",
     "firebase": "^10.12.5",
     "js-cookie": "^3.0.5",
-    "next": "14.2.4",
+    "next": "^14.2.17",
     "prettier": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-file-viewer": "^0.3.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
