--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
-    "@cyntler/react-doc-viewer": "^1.17.0",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
@@ -26,8 +25,8 @@
     "next": "^14.2.17",
     "prettier": "^3.3.2",
     "react": "^18",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18",
-    "react-file-viewer": "^0.0.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
