--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "firebase": "^10.12.5",
     "js-cookie": "^3.0.5",
     "marked": "^14.1.4",
+    "motion": "^11.12.0",
     "next": "^14.2.17",
     "prettier": "^3.3.2",
     "react": "^18",
     "react-doc-viewer": "^0.1.14",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-pdf": "^9.1.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5"
