--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:fix": "prettier . --write"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^5.4.0",
     "@types/js-cookie": "^3.0.6",
     "antd": "^5.19.0",
     "axios": "^1.7.2",
